Navigation bar spacing fixed.

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -448,3 +448,9 @@ ul {
     align-items: center;
   }
 }
+
+
+/* For all */
+.show {
+  padding: unset;
+}
